Added single config entry option

--- a/custom_components/energy_stats/manifest.json
+++ b/custom_components/energy_stats/manifest.json
@@ -12,5 +12,6 @@
   "iot_class": "calculated",
   "issue_tracker": "https://github.com/ludeeus/integration_blueprint/issues",
   "requirements": [],
+  "single_config_entry": true,
   "version": "1.0.0"
 }
